--- a/features/calc.yml.dist
+++ b/features/calc.yml.dist
@@ -14,4 +14,55 @@ status:
     safari: "7"
     safari_ios: "7"
 compat_features:
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: high
+  # baseline_low_date: 2015-07-29
+  # baseline_high_date: 2018-01-29
+  # support:
+  #   chrome: "26"
+  #   chrome_android: "28"
+  #   edge: "12"
+  #   firefox: "16"
+  #   firefox_android: "16"
+  #   safari: "7"
+  #   safari_ios: "7"
   - css.types.calc
+
+  # baseline: high
+  # baseline_low_date: 2015-07-29
+  # baseline_high_date: 2018-01-29
+  # support:
+  #   chrome: "26"
+  #   chrome_android: "28"
+  #   edge: "12"
+  #   firefox: "19"
+  #   firefox_android: "19"
+  #   safari: "7"
+  #   safari_ios: "7"
+  - css.types.calc.gradient_color_stops
+
+  # baseline: high
+  # baseline_low_date: 2016-08-02
+  # baseline_high_date: 2019-02-02
+  # support:
+  #   chrome: "31"
+  #   chrome_android: "31"
+  #   edge: "12"
+  #   firefox: "48"
+  #   firefox_android: "48"
+  #   safari: "7"
+  #   safari_ios: "7"
+  - css.types.calc.number_values
+
+  # baseline: high
+  # baseline_low_date: 2017-10-17
+  # baseline_high_date: 2020-04-17
+  # support:
+  #   chrome: "51"
+  #   chrome_android: "51"
+  #   edge: "16"
+  #   firefox: "48"
+  #   firefox_android: "48"
+  #   safari: "11"
+  #   safari_ios: "11"
+  - css.types.calc.nested
