--- a/features/ink.yml
+++ b/features/ink.yml
@@ -4,8 +4,8 @@ spec: https://wicg.github.io/ink-enhancement/
 compat_features:
   - api.Ink
   - api.Ink.requestPresenter
-  - api.InkPresenter
-  - api.InkPresenter.expectedImprovement
-  - api.InkPresenter.presentationArea
-  - api.InkPresenter.updateInkTrailStartPoint
+  - api.DelegatedInkTrailPresenter
+  - api.DelegatedInkTrailPresenter.expectedImprovement
+  - api.DelegatedInkTrailPresenter.presentationArea
+  - api.DelegatedInkTrailPresenter.updateInkTrailStartPoint
   - api.Navigator.ink
