--- a/features/draft/spec/media-capabilities.yml.dist
+++ b/features/draft/spec/media-capabilities.yml.dist
@@ -38,8 +38,9 @@ compat_features:
   #   safari_ios: "15.4"
   - api.WorkerNavigator.mediaCapabilities
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-04-28
+  # baseline_high_date: 2024-10-28
   # support:
   #   chrome: "101"
   #   chrome_android: "101"
