--- a/features/file-system-access.yml
+++ b/features/file-system-access.yml
@@ -4,8 +4,14 @@ spec: https://wicg.github.io/file-system-access/
 caniuse: native-filesystem-api
 group: file-system
 compat_features:
+  - api.FileSystemDirectoryHandle.@@asyncIterator
+  - api.FileSystemFileHandle.createWritable
   - api.FileSystemHandle.queryPermission
   - api.FileSystemHandle.requestPermission
+  - api.FileSystemWritableFileStream
+  - api.FileSystemWritableFileStream.seek
+  - api.FileSystemWritableFileStream.truncate
+  - api.FileSystemWritableFileStream.write
   - api.Window.showDirectoryPicker
   - api.Window.showOpenFilePicker
   - api.Window.showSaveFilePicker
