--- a/features/dom.yml
+++ b/features/dom.yml
@@ -1,5 +1,5 @@
-name: DOM Standard
-description: "The DOM (Document Object Model) is an API for working with documents by modeling them as trees of nodes.  You can change a document's structure, style, or content using this API via JavaScript."
+name: DOM
+description: The DOM (Document Object Model) API represents HTML and XML documents as trees of nodes. You can use the API to inspect and modify the structure and content of a document.
 spec: https://dom.spec.whatwg.org/
 status:
   compute_from: api.Document
