--- a/features/custom-ellipsis.yml
+++ b/features/custom-ellipsis.yml
@@ -1,4 +1,4 @@
-name: Custom ellipsis
+name: Custom ellipses
 description: The `text-overflow` CSS property with a string value sets the string representing clipped text.
 spec: https://drafts.csswg.org/css-overflow-4/#overflow-string
 compat_features:
