Add additional overflow keys (#2102)
Co-authored-by: Daniel D. Beck <daniel@ddbeck.com>

--- a/features/overflow-shorthand.yml
+++ b/features/overflow-shorthand.yml
@@ -3,6 +3,8 @@ description: The `overflow` CSS property sets the behavior for when content does
 spec: https://drafts.csswg.org/css-overflow-3/#propdef-overflow
 group: css
 caniuse: css-overflow
+status:
+  compute_from: css.properties.overflow.clip
 compat_features:
   - css.properties.overflow
   - css.properties.overflow-x
