--- a/features/mutationobserver.yml
+++ b/features/mutationobserver.yml
@@ -1,5 +1,5 @@
 name: MutationObserver
-description: "`MutationObserver` watches for changes being made to the DOM tree and invokes a specified callback function when DOM changes occur."
+description: The `MutationObserver` API watches for changes to the DOM tree and calls a callback function when DOM changes occur.
 spec: https://dom.spec.whatwg.org/#interface-mutationobserver
 compat_features:
   - api.MutationObserver
