Apply suggestions from code review

--- a/features/payment-request.yml
+++ b/features/payment-request.yml
@@ -1,5 +1,5 @@
-name: Payment Request
-description: The Payment Request API allows the browser to offer a consistent user experience for making payments.
+name: Payment request
+description: The `PaymentRequest` API prompts the user to make a payment through the browser's user interface.
 spec: https://w3c.github.io/payment-request/
 group: payments
 status:
