--- a/features/payment-handler.yml
+++ b/features/payment-handler.yml
@@ -1,5 +1,5 @@
 name: Payment handler
-description: The Payment Handler API lets web applications handle requests for payments directly through the browser user interface, rather than redirecting users to a separate site for payment handling.
+description: The payment handler API registers a web application as a payment handler and responds to payment requests in the browser's user interface, rather than redirecting users to a separate site to complete a payment.
 spec: https://w3c.github.io/payment-handler/
 group: payments
 status:
