Applies suggested changes
Co-authored-by: Daniel D. Beck <daniel@ddbeck.com>

--- a/features/interpolate-size.yml
+++ b/features/interpolate-size.yml
@@ -1,5 +1,5 @@
 name: interpolate-size
-description: The `interpolate-size` CSS property allows animations and transitions to interpolate between a numeric value and keyword values such as `auto` or `fit-content`.
+description: The `interpolate-size` CSS property sets whether animations and transitions interpolate between a numeric value and a keyword value, such as from a fixed length to `auto` or `fit-content`.
 spec: https://drafts.csswg.org/css-values-5/#interpolate-size
 group:
   - transitions
