--- a/features/contents-attr.yml
+++ b/features/contents-attr.yml
@@ -1,5 +1,5 @@
-name: "contents: attr()"
-description: "The `contents: attr()` CSS declaration sets an element's contents to the value of the specified attribute."
+name: "content: attr()"
+description: "The `content: attr()` CSS declaration sets a `::before` or `::after` pseudo-element's content to the value of the specified HTML attribute."
 spec: https://drafts.csswg.org/css-values-5/#attr-notation
 group: css
 compat_features:
