--- a/features/url-type.yml
+++ b/features/url-type.yml
@@ -1,6 +1,6 @@
 name: url (CSS type)
 description: The `url` CSS type represents an external resource.
-spec: https://drafts.csswg.org/css-values-4/#string-value
+spec: https://drafts.csswg.org/css-values-4/#urls
 group: types
 compat_features:
   - css.types.url
