Add CSSPseudoElement keys to CSSOM

--- a/features/css-object-model.yml
+++ b/features/css-object-model.yml
@@ -85,3 +85,6 @@ compat_features:
   - api.CSSConditionRule.conditionText
   - api.CSSMediaRule
   - api.CSSMediaRule.media
+  - api.CSSPseudoElement
+  - api.CSSPseudoElement.element
+  - api.CSSPseudoElement.type
