--- a/features/css-object-model.yml.dist
+++ b/features/css-object-model.yml.dist
@@ -265,3 +265,6 @@ compat_features:
   - api.CSSMarginRule
   - api.CSSMarginRule.name
   - api.CSSMarginRule.style
+  - api.CSSPseudoElement
+  - api.CSSPseudoElement.element
+  - api.CSSPseudoElement.type
