--- a/features/css-supports.yml
+++ b/features/css-supports.yml
@@ -1,6 +1,6 @@
 name: CSS.supports()
 description: The `CSS.supports()` static method returns whether the browser supports a given CSS feature.
-spec: https://www.w3.org/TR/css-conditional-3/#the-css-namespace
+spec: https://drafts.csswg.org/css-conditional-3/#the-css-namespace
 caniuse: css-supports-api
 group: css
 compat_features:
