--- a/features/flexbox.yml
+++ b/features/flexbox.yml
@@ -3,16 +3,31 @@ description: Flexbox is a one-dimensional layout system, which places content ei
 spec: https://drafts.csswg.org/css-flexbox-1/
 group: flexbox
 caniuse: flexbox
-# Status is manually set to match https://caniuse.com/flexbox.
-# TODO: https://github.com/web-platform-dx/web-features/pull/1227
 status:
-  baseline: high
-  baseline_low_date: 2015-09-30
-  support:
-    chrome: "29"
-    chrome_android: "29"
-    edge: "12"
-    firefox: "28"
-    firefox_android: "28"
-    safari: "9"
-    safari_ios: "9"
+  compute_from: css.properties.display.flex
+compat_features:
+  - css.properties.display.flex
+  - css.properties.display.inline-flex
+  - css.properties.flex
+  - css.properties.flex-direction
+  - css.properties.flex-grow
+  - css.properties.flex-shrink
+  - css.properties.order
+  - css.properties.flex-basis
+  - css.properties.flex-basis.auto
+  - css.properties.align-content.flex_context
+  - css.properties.flex-flow
+  - css.properties.flex-wrap
+  - css.properties.align-self.flex_context
+  - css.properties.align-items.flex_context
+  - css.properties.justify-content.flex_context
+  - css.properties.justify-items.flex_context
+  - css.properties.align-content.flex_context.stretch
+  - css.properties.align-self.flex_context.stretch
+  - css.properties.justify-content.flex_context.stretch
+  - css.properties.place-content.flex_context
+  - css.properties.place-items.flex_context
+  - css.properties.place-self.flex_context
+  - css.properties.align-self.flex_context.baseline
+  - css.properties.align-items.flex_context.baseline
+  - css.properties.position.absolutely_positioned_flex_children
