--- a/features/font-face.yml
+++ b/features/font-face.yml
@@ -5,6 +5,8 @@ group: fonts
 caniuse:
   - fontface
   - font-unicode-range
+status:
+  compute_from: css.at-rules.font-face.WOFF_2
 compat_features:
   - css.at-rules.font-face
   - css.at-rules.font-face.font-family
@@ -14,3 +16,9 @@ compat_features:
   - api.CSSFontFaceRule
   - api.CSSFontFaceRule.style
   - css.at-rules.font-face.unicode-range
+  - css.at-rules.font-face.OpenType_CBDT_CBLC
+  - css.at-rules.font-face.OpenType_COLRv0
+  - css.at-rules.font-face.OpenType_SBIX
+  - css.at-rules.font-face.src.drop_invalid_item
+  - css.at-rules.font-face.src.format_keyword
+  - css.at-rules.font-face.src.tech_keyword
