Updates font-variant keys

--- a/features/font-variant.yml
+++ b/features/font-variant.yml
@@ -14,3 +14,6 @@ compat_features:
   - css.properties.font-variant.sub
   - css.properties.font-variant.super
   - css.properties.font-variant.turkic_is
+  - css.properties.font-variant.css_fonts_shorthand
+  - css.properties.font-variant.greek_accented_characters
+  - css.properties.font-variant.uppercase_eszett
