--- a/features/font-shorthand.yml
+++ b/features/font-shorthand.yml
@@ -4,3 +4,10 @@ spec: https://drafts.csswg.org/css-fonts-4/#font-prop
 group: fonts
 compat_features:
   - css.properties.font
+  - css.properties.font.caption
+  - css.properties.font.font_stretch_support
+  - css.properties.font.icon
+  - css.properties.font.menu
+  - css.properties.font.message-box
+  - css.properties.font.small-caption
+  - css.properties.font.status-bar
