Misc font keys cleanup

--- a/features/font-stretch.yml
+++ b/features/font-stretch.yml
@@ -10,4 +10,5 @@ compat_features:
   - css.at-rules.font-face.font-stretch
   - css.properties.font-stretch
   - css.properties.font-stretch.percentage
+  - css.properties.font.font_stretch_support
   - svg.global_attributes.font-stretch
