--- a/features/font-stretch.yml.dist
+++ b/features/font-stretch.yml.dist
@@ -54,3 +54,16 @@ compat_features:
   #   safari: "11.1"
   #   safari_ios: "11.3"
   - css.properties.font-stretch.percentage
+
+  # baseline: high
+  # baseline_low_date: 2020-01-15
+  # baseline_high_date: 2022-07-15
+  # support:
+  #   chrome: "60"
+  #   chrome_android: "60"
+  #   edge: "79"
+  #   firefox: "43"
+  #   firefox_android: "43"
+  #   safari: "11"
+  #   safari_ios: "11"
+  - css.properties.font.font_stretch_support
