--- a/features/wasm-bigint.yml
+++ b/features/wasm-bigint.yml
@@ -1,5 +1,5 @@
-name: WebAssembly BigInt to i64 conversion in JavaScript
-description: An extension to the WebAssembly JavaScript API for bidirectionally converting BigInts and 64-bit WebAssembly integer values.
+name: BigInt to i64 conversion (WebAssembly)
+description: Integer values pass bidirectionally between JavaScript and WebAssembly, converted to i64 values in WebAssembly or BigInt values in JavaScript.
 spec: https://webassembly.github.io/spec/js-api/#ref-for-syntax-numtype①⓪
 caniuse: wasm-bigint
 compat_features:
