--- a/features/wasm-garbage-collection.yml
+++ b/features/wasm-garbage-collection.yml
@@ -1,5 +1,5 @@
-name: WebAssembly garbage collection
-description: An extension to WebAssembly adding support for garbage collection.
-spec: https://webassembly.github.io/gc/core/bikeshed/
+name: Garbage collection (WebAssembly)
+description: Garbage collection support in WebAssembly.
+spec: https://webassembly.github.io/gc/core/bikeshed/#garbage-collection①
 compat_features:
   - webassembly.garbage-collection
