--- a/features/wasm-non-trapping-float-to-int.yml
+++ b/features/wasm-non-trapping-float-to-int.yml
@@ -1,6 +1,6 @@
-name: WebAssembly non-trapping float-to-int conversion
-description: An extension to WebAssembly adding floating-point to integer conversion operators which saturate instead of trapping.
-spec: https://webassembly.github.io/gc/core/bikeshed/
+name: Non-trapping float-to-int conversion (WebAssembly)
+description: Floating-point to integer conversion operators which saturate instead of trapping (on positive or negative overflow, they return the maximum or minimum integer value, respectively, and do not trap.)
+spec: https://github.com/WebAssembly/spec/blob/main/proposals/nontrapping-float-to-int-conversion/Overview.md
 caniuse: wasm-nontrapping-fptoint
 compat_features:
   - webassembly.non-trapping-float-to-int-conversions
