--- a/features/wasm-sign-extension-operators.yml
+++ b/features/wasm-sign-extension-operators.yml
@@ -1,6 +1,6 @@
-name: WebAssembly sign extension operators
-description: An extension to WebAssembly adding sign-extension operator instructions.
-spec: https://webassembly.github.io/gc/core/bikeshed/
+name: Sign extension operators (WebAssembly)
+description: Sign-extension operator instructions for 8-bit, 16-bit, and 32-bit values.
+spec: https://github.com/WebAssembly/spec/blob/main/proposals/sign-extension-ops/Overview.md
 caniuse: wasm-signext
 compat_features:
   - webassembly.sign-extension-operations
