--- a/features/wasm.yml
+++ b/features/wasm.yml
@@ -1,5 +1,5 @@
 name: WebAssembly
-description: WebAssembly or WASM is a portable binary instruction format suitable for compilation to the web.
+description: The `WebAssembly.instantiate()` and `WebAssembly.instantiateStreaming()` global static methods load WebAssembly code (also known as Wasm), a portable binary instruction format.
 spec: https://webassembly.github.io/gc/core/bikeshed/
 caniuse: wasm
 status:
