--- a/features/wasm-mutable-globals.yml
+++ b/features/wasm-mutable-globals.yml
@@ -1,6 +1,7 @@
 name: Import and export of mutable globals (WebAssembly)
 description: Mutable global variables can be imported and exported.
 spec: https://webassembly.github.io/spec/js-api/#dom-globaldescriptor-mutable
+group: webassembly
 caniuse: wasm-mutable-globals
 compat_features:
   - webassembly.mutable-globals
