--- a/features/wasm.yml
+++ b/features/wasm.yml
@@ -1,6 +1,7 @@
 name: WebAssembly
 description: The `WebAssembly.instantiate()` and `WebAssembly.instantiateStreaming()` global static methods load WebAssembly code (also known as Wasm), a portable binary instruction format.
 spec: https://webassembly.github.io/gc/core/bikeshed/
+group: webassembly
 caniuse: wasm
 status:
   compute_from: webassembly.api
