--- a/features/wasm-bulk-memory.yml
+++ b/features/wasm-bulk-memory.yml
@@ -2,5 +2,6 @@ name: Bulk memory operations (WebAssembly)
 description: Bulk memory operations such as `copy` and `init` similar to the native `memcpy` and `memmove` functions.
 spec: https://github.com/WebAssembly/spec/blob/main/proposals/bulk-memory-operations/Overview.md
 caniuse: wasm-bulk-memory
+group: webassembly
 compat_features:
   - webassembly.bulk-memory-operations
