--- a/features/wasm-extended-constant-expressions.yml
+++ b/features/wasm-extended-constant-expressions.yml
@@ -1,5 +1,6 @@
 name: Extended constant expressions (WebAssembly)
 description: New valid constant expressions (`i32.add`, `i32.sub`, `i32.mul`, `i64.add`, `i64.sub`, `i64.mul`).
 spec: https://github.com/WebAssembly/extended-const/blob/main/proposals/extended-const/Overview.md
+group: webassembly
 compat_features:
   - webassembly.extended-constant-expressions
