--- a/features/wasm-garbage-collection.yml
+++ b/features/wasm-garbage-collection.yml
@@ -1,5 +1,6 @@
 name: Garbage collection (WebAssembly)
 description: Garbage collection support in WebAssembly.
 spec: https://webassembly.github.io/gc/core/bikeshed/#garbage-collection①
+group: webassembly
 compat_features:
   - webassembly.garbage-collection
