--- a/features/wasm-simd-relaxed.yml
+++ b/features/wasm-simd-relaxed.yml
@@ -1,5 +1,6 @@
 name: Relaxed width SIMD (WebAssembly)
 description: Relaxed SIMD (Single Instruction Multiple Data) introducing local non-determinism (where the results of the instructions may vary based on hardware support).
 spec: https://github.com/WebAssembly/relaxed-simd/blob/main/proposals/relaxed-simd/Overview.md
+group: webassembly
 compat_features:
   - webassembly.relaxed-SIMD
