--- a/features/regexp.yml.dist
+++ b/features/regexp.yml.dist
@@ -308,4 +308,6 @@ compat_features:
   #   chrome: "125"
   #   chrome_android: "125"
   #   edge: "125"
+  #   firefox: "132"
+  #   firefox_android: "132"
   - javascript.regular_expressions.modifier
