--- a/features/autofocus.yml.dist
+++ b/features/autofocus.yml.dist
@@ -14,6 +14,7 @@ compat_features:
   #   safari_ios: "15.4"
   - api.HTMLElement.autofocus
   - api.SVGElement.autofocus
+  - svg.global_attributes.autofocus
 
   # baseline: low
   # baseline_low_date: 2023-02-14
