--- a/features/draft/spec/css-nesting-1.yml.dist
+++ b/features/draft/spec/css-nesting-1.yml.dist
@@ -7,6 +7,7 @@ status:
     chrome: "130"
     chrome_android: "130"
     edge: "130"
+    firefox: "132"
 compat_features:
   - api.CSSNestedDeclarations
   - api.CSSNestedDeclarations.style
