--- a/features/draft/spec/css-transitions-2.yml.dist
+++ b/features/draft/spec/css-transitions-2.yml.dist
@@ -31,11 +31,16 @@ compat_features:
   #   safari_ios: "14"
   - css.properties.transition-timing-function.jump
 
-  # baseline: false
+  # baseline: low
+  # baseline_low_date: 2024-08-06
   # support:
   #   chrome: "117"
   #   chrome_android: "117"
   #   edge: "117"
+  #   firefox: "129"
+  #   firefox_android: "129"
+  #   safari: "17.4"
+  #   safari_ios: "17.4"
   - css.properties.transition.transition-behavior
 
   # ⬇️ Same status as overall feature ⬇️
