--- a/features/draft/spec/mediacapture-streams.yml.dist
+++ b/features/draft/spec/mediacapture-streams.yml.dist
@@ -331,6 +331,18 @@ compat_features:
   - html.elements.iframe.allow.camera
   - html.elements.iframe.allow.microphone
 
+  # baseline: low
+  # baseline_low_date: 2024-10-29
+  # support:
+  #   chrome: "59"
+  #   chrome_android: "59"
+  #   edge: "12"
+  #   firefox: "132"
+  #   firefox_android: "132"
+  #   safari: "11"
+  #   safari_ios: "11"
+  - api.MediaStreamTrack.getCapabilities
+
   # baseline: false
   # support:
   #   chrome: "57"
@@ -369,15 +381,6 @@ compat_features:
   #   safari: "11"
   #   safari_ios: "11"
   - api.MediaStreamTrack.muted
-
-  # baseline: false
-  # support:
-  #   chrome: "59"
-  #   chrome_android: "59"
-  #   edge: "12"
-  #   safari: "11"
-  #   safari_ios: "11"
-  - api.MediaStreamTrack.getCapabilities
 
   # baseline: false
   # support:
