--- a/features/fetch-priority.yml.dist
+++ b/features/fetch-priority.yml.dist
@@ -10,6 +10,47 @@ status:
     safari: "17.2"
     safari_ios: "17.2"
 compat_features:
+  # baseline: low
+  # baseline_low_date: 2024-10-29
+  # support:
+  #   chrome: "101"
+  #   chrome_android: "101"
+  #   edge: "101"
+  #   firefox: "132"
+  #   firefox_android: "132"
+  #   safari: "17.2"
+  #   safari_ios: "17.2"
+  - api.Request.Request.init_priority_parameter
+  - html.elements.img.fetchpriority
+  - html.elements.link.fetchpriority
+  - html.elements.script.fetchpriority
+
+  # baseline: low
+  # baseline_low_date: 2024-10-29
+  # support:
+  #   chrome: "102"
+  #   chrome_android: "102"
+  #   edge: "102"
+  #   firefox: "132"
+  #   firefox_android: "132"
+  #   safari: "17.2"
+  #   safari_ios: "17.2"
+  - api.HTMLImageElement.fetchPriority
+  - api.HTMLLinkElement.fetchPriority
+  - api.HTMLScriptElement.fetchPriority
+
+  # baseline: low
+  # baseline_low_date: 2024-10-29
+  # support:
+  #   chrome: "103"
+  #   chrome_android: "103"
+  #   edge: "103"
+  #   firefox: "132"
+  #   firefox_android: "132"
+  #   safari: "17.2"
+  #   safari_ios: "17.2"
+  - http.headers.Link.fetchpriority
+
   # baseline: false
   # support:
   #   chrome: "101"
@@ -17,29 +58,4 @@ compat_features:
   #   edge: "101"
   #   safari: "17.2"
   #   safari_ios: "17.2"
-  - api.Request.Request.init_priority_parameter
   - api.fetch.init_priority_parameter
-  - html.elements.img.fetchpriority
-  - html.elements.link.fetchpriority
-  - html.elements.script.fetchpriority
-
-  # baseline: false
-  # support:
-  #   chrome: "102"
-  #   chrome_android: "102"
-  #   edge: "102"
-  #   safari: "17.2"
-  #   safari_ios: "17.2"
-  - api.HTMLImageElement.fetchPriority
-  - api.HTMLLinkElement.fetchPriority
-  - api.HTMLScriptElement.fetchPriority
-
-  # ⬇️ Same status as overall feature ⬇️
-  # baseline: false
-  # support:
-  #   chrome: "103"
-  #   chrome_android: "103"
-  #   edge: "103"
-  #   safari: "17.2"
-  #   safari_ios: "17.2"
-  - http.headers.Link.fetchpriority
