--- a/features/nesting.yml.dist
+++ b/features/nesting.yml.dist
@@ -39,3 +39,11 @@ compat_features:
   #   safari: "17.2"
   #   safari_ios: "17.2"
   - css.selectors.nesting
+
+  # baseline: false
+  # support:
+  #   chrome: "130"
+  #   chrome_android: "130"
+  #   edge: "130"
+  - api.CSSNestedDeclarations
+  - api.CSSNestedDeclarations.style
