--- a/features/nesting.yml.dist
+++ b/features/nesting.yml.dist
@@ -45,5 +45,6 @@ compat_features:
   #   chrome: "130"
   #   chrome_android: "130"
   #   edge: "130"
+  #   firefox: "132"
   - api.CSSNestedDeclarations
   - api.CSSNestedDeclarations.style
