Add case insensitive

--- a/features/case-insensitive-attributes.yml
+++ b/features/case-insensitive-attributes.yml
@@ -3,4 +3,4 @@ description: ""
 spec: https://drafts.csswg.org/selectors-4/#attribute-case
 caniuse: ""
 compat_features:
-  - css.selectors.attribute.case_sensitive_modifier
+  - css.selectors.attribute.case_insensitive_modifier
