--- a/features/nth-child.yml.dist
+++ b/features/nth-child.yml.dist
@@ -6,7 +6,7 @@ status:
   baseline_low_date: 2015-07-29
   baseline_high_date: 2018-01-29
   support:
-    chrome: "4"
+    chrome: "1"
     chrome_android: "18"
     edge: "12"
     firefox: "3.5"
@@ -21,13 +21,52 @@ compat_features:
   #   chrome: "1"
   #   chrome_android: "18"
   #   edge: "12"
+  #   firefox: "1"
+  #   firefox_android: "4"
+  #   safari: "3.1"
+  #   safari_ios: "2"
+  - css.selectors.last-child
+
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: high
+  # baseline_low_date: 2015-07-29
+  # baseline_high_date: 2018-01-29
+  # support:
+  #   chrome: "1"
+  #   chrome_android: "18"
+  #   edge: "12"
   #   firefox: "3.5"
   #   firefox_android: "4"
   #   safari: "3.1"
   #   safari_ios: "2"
   - css.selectors.nth-child
 
-  # ⬇️ Same status as overall feature ⬇️
+  # baseline: high
+  # baseline_low_date: 2015-07-29
+  # baseline_high_date: 2018-01-29
+  # support:
+  #   chrome: "2"
+  #   chrome_android: "18"
+  #   edge: "12"
+  #   firefox: "1.5"
+  #   firefox_android: "4"
+  #   safari: "3.1"
+  #   safari_ios: "2"
+  - css.selectors.only-child
+
+  # baseline: high
+  # baseline_low_date: 2015-07-29
+  # baseline_high_date: 2018-01-29
+  # support:
+  #   chrome: "4"
+  #   chrome_android: "18"
+  #   edge: "12"
+  #   firefox: "3"
+  #   firefox_android: "4"
+  #   safari: "3.1"
+  #   safari_ios: "4"
+  - css.selectors.first-child
+
   # baseline: high
   # baseline_low_date: 2015-07-29
   # baseline_high_date: 2018-01-29
@@ -40,3 +79,16 @@ compat_features:
   #   safari: "3.1"
   #   safari_ios: "2"
   - css.selectors.nth-last-child
+
+  # baseline: false
+  # support:
+  #   chrome: "57"
+  #   chrome_android: "57"
+  #   edge: "79"
+  #   firefox: "52"
+  #   firefox_android: "52"
+  - css.selectors.first-child.no_parent_required
+  - css.selectors.last-child.no_parent_required
+  - css.selectors.nth-child.no_parent_required
+  - css.selectors.nth-last-child.no_parent_required
+  - css.selectors.only-child.no_parent_required
