--- a/features/rhythmic-sizing.yml
+++ b/features/rhythmic-sizing.yml
@@ -1,5 +1,5 @@
 name: Rhythmic sizing
-description: The `line-height-step` CSS property sets the spacing between body text baselines and rounds the spacing for taller lines like headings up to the next multiple of the body text spacing to create vertical rhythm. Also called rhythmic sizing.
+description: The `line-height-step` CSS property creates consistent vertical rhythm by setting the spacing between body text baselines. It rounds taller lines like headings up to the next multiple of the body text spacing.
 spec: https://drafts.csswg.org/css-rhythm-1/
 group: text
 compat_features:
