--- a/features/css-supports.yml
+++ b/features/css-supports.yml
@@ -1,5 +1,5 @@
 name: CSS.supports()
-description: The `CSS.supports()` static method returns whether the browser supports a given CSS feature.
+description: The `CSS.supports()` static method returns whether the browser supports a CSS declaration (given by two arguments, a property and value) or an `@supports` at-rule condition string.
 spec: https://drafts.csswg.org/css-conditional-3/#the-css-namespace
 caniuse: css-supports-api
 group: css
