Add CSS.supports() and missing CSSOM keys (#2129)
Co-authored-by: Daniel D. Beck <daniel@ddbeck.com>

--- a/features/css-object-model.yml
+++ b/features/css-object-model.yml
@@ -81,3 +81,10 @@ compat_features:
   - api.CSSMarginRule
   - api.CSSMarginRule.name
   - api.CSSMarginRule.style
+  - api.CSSConditionRule
+  - api.CSSConditionRule.conditionText
+  - api.CSSMediaRule
+  - api.CSSMediaRule.media
+  - api.CSSPseudoElement
+  - api.CSSPseudoElement.element
+  - api.CSSPseudoElement.type
