--- a/features/css-object-model.yml.dist
+++ b/features/css-object-model.yml.dist
@@ -78,6 +78,8 @@ compat_features:
   #   firefox_android: "4"
   #   safari: "3"
   #   safari_ios: "1"
+  - api.CSSMediaRule
+  - api.CSSMediaRule.media
   - api.HTMLElement.style
 
   # baseline: high
@@ -204,6 +206,20 @@ compat_features:
   - api.CSSGroupingRule.deleteRule
   - api.CSSGroupingRule.insertRule
 
+  # baseline: high
+  # baseline_low_date: 2021-04-26
+  # baseline_high_date: 2023-10-26
+  # support:
+  #   chrome: "56"
+  #   chrome_android: "56"
+  #   edge: "12"
+  #   firefox: "20"
+  #   firefox_android: "20"
+  #   safari: "14.1"
+  #   safari_ios: "14.5"
+  - api.CSSConditionRule
+  - api.CSSConditionRule.conditionText
+
   # baseline: low
   # baseline_low_date: 2023-02-14
   # support:
@@ -249,3 +265,6 @@ compat_features:
   - api.CSSMarginRule
   - api.CSSMarginRule.name
   - api.CSSMarginRule.style
+  - api.CSSPseudoElement
+  - api.CSSPseudoElement.element
+  - api.CSSPseudoElement.type
