Apply suggestions from code review
Co-authored-by: Daniel D. Beck <daniel@ddbeck.com>

--- a/features/wasm-extended-constant-expressions.yml
+++ b/features/wasm-extended-constant-expressions.yml
@@ -1,5 +1,5 @@
 name: Extended constant expressions (WebAssembly)
-description: New valid constant expressions (`i32.add`, `i32.sub`, `i32.mul`, `i64.add`, `i64.sub`, `i64.mul`).
+description: The `i32.add`, `i32.sub`, `i32.mul`, `i64.add`, `i64.sub`, and `i64.mul` operations extend constant expressions to include arithmetic.
 spec: https://github.com/WebAssembly/extended-const/blob/main/proposals/extended-const/Overview.md
 group: webassembly
 compat_features:
