--- a/features/wasm-garbage-collection.yml
+++ b/features/wasm-garbage-collection.yml
@@ -1,5 +1,5 @@
 name: Garbage collection (WebAssembly)
-description: Garbage collection support in WebAssembly.
+description: Garbage collection tracks references for better memory management with garbage-collected languages running in WebAssmbly.
 spec: https://webassembly.github.io/gc/core/bikeshed/#garbage-collection①
 group: webassembly
 compat_features:
