--- a/features/wasm-mutable-globals.yml
+++ b/features/wasm-mutable-globals.yml
@@ -1,5 +1,5 @@
 name: Import and export of mutable globals (WebAssembly)
-description: Mutable global variables can be imported and exported.
+description: Mutable global variables are importable and exportable.
 spec: https://webassembly.github.io/spec/js-api/#dom-globaldescriptor-mutable
 group: webassembly
 caniuse: wasm-mutable-globals
