--- a/features/wasm-reference-types.yml
+++ b/features/wasm-reference-types.yml
@@ -1,5 +1,5 @@
 name: Reference types (WebAssembly)
-description: The `externref` type can be used as both a value types and a table element type. The `funcref`can be used as a value type.
+description: The `externref` type can be both a value type and a table element type, while `funcref` can be a value type.
 spec: https://github.com/WebAssembly/spec/blob/main/proposals/reference-types/Overview.md
 group: webassembly
 caniuse: wasm-reference-types
