--- a/features/wasm-simd.yml
+++ b/features/wasm-simd.yml
@@ -1,4 +1,7 @@
-name: WebAssembly SIMD
-description: The 128-bit SIMD (Single Instruction Multiple Data) extension to WebAssembly performs one instruction on multiple units of data, when running on hardware that supports such instructions. Also known as vector instructions.
+name: Fixed-width SIMD (WebAssembly)
+description: 128-bit SIMD (Single Instruction Multiple Data) performs one instruction on multiple units of data, when running on hardware that supports such instructions. Also known as vector instructions.
 spec: https://webassembly.github.io/spec/core/bikeshed/#vector-instructions
+group: webassembly
 caniuse: wasm-simd
+compat_features:
+  - webassembly.fixed-width-SIMD
