Add/Update names and descriptions

--- a/features/ext-disjoint-timer-query.yml
+++ b/features/ext-disjoint-timer-query.yml
@@ -1,5 +1,5 @@
-name: WebGL EXT_disjoint_timer_query extension
-description: The `EXT_disjoint_timer_query` extension to WebGL TODO
+name: EXT_disjoint_timer_query WebGL extension
+description: The `EXT_disjoint_timer_query` extension for WebGL 1.0 contexts measures the duration of a set of GL commands, without stalling the rendering pipeline.
 spec: https://registry.khronos.org/webgl/extensions/EXT_disjoint_timer_query/
 group: webgl-extensions
 compat_features:
