--- a/features/ovr-multiview2.yml
+++ b/features/ovr-multiview2.yml
@@ -1,5 +1,5 @@
-name: WebGL OVR_multiview2 extension
-description: The `OVR_multiview2` extension to WebGL TODO
+name: OVR_multiview2 WebGL extension
+description: The `OVR_multiview2` extension for WebGL 2.0 contexts renders into multiple views simultaneously. This especially useful for virtual reality (VR) and WebXR.
 spec: https://registry.khronos.org/webgl/extensions/OVR_multiview2/
 group: webgl-extensions
 compat_features:
