--- a/features/webgl-draw-buffers.yml
+++ b/features/webgl-draw-buffers.yml
@@ -1,5 +1,5 @@
-name: WebGL WEBGL_draw_buffers extension
-description: The `WEBGL_draw_buffers` extension to WebGL TODO
+name: WEBGL_draw_buffers WebGL extension
+description: The `WEBGL_draw_buffers` extension for WebGL 1.0 contexts enables a fragment shader to write to several textures, which is useful for deferred shading, for example.
 spec: https://registry.khronos.org/webgl/extensions/WEBGL_draw_buffers/
 group: webgl-extensions
 compat_features:
