--- a/features/webgl-multi-draw.yml
+++ b/features/webgl-multi-draw.yml
@@ -1,5 +1,5 @@
-name: WebGL WEBGL_multi_draw extension
-description: The `WEBGL_multi_draw` extension to WebGL TODO
+name: WEBGL_multi_draw WebGL extension
+description: The `WEBGL_multi_draw` extension for WebGL 1.0 and 2.0 contexts renders more than one primitive with a single function call.
 spec: https://registry.khronos.org/webgl/extensions/WEBGL_multi_draw/
 group: webgl-extensions
 compat_features:
