--- a/features/webgl-oes-draw-buffers-indexed.yml
+++ b/features/webgl-oes-draw-buffers-indexed.yml
@@ -1,4 +1,4 @@
-name: WebGL OES_draw_buffers_indexed extension
-description: The `OES_draw_buffers_indexed` extension to WebGL allows you to control blending on a per-color basis when writing to multiple color buffers simultaneously.
+name: OES_draw_buffers_indexed WebGL extension
+description: The `OES_draw_buffers_indexed` extension for WebGL 2.0 contexts allows you to control blending on a per-color basis when writing to multiple color buffers simultaneously.
 spec: https://registry.khronos.org/webgl/extensions/OES_draw_buffers_indexed/
 group: webgl-extensions
