--- a/features/ext-color-buffer-float.yml
+++ b/features/ext-color-buffer-float.yml
@@ -1,5 +1,5 @@
-name: WebGL EXT_color_buffer_float extension
-description: The `EXT_color_buffer_float` extension to WebGL TODO
+name: EXT_color_buffer_float WebGL extension
+description: The `EXT_color_buffer_float` extension for WebGL 2.0 contexts adds color-renderable floating point formats to `renderbufferStorage()`.
 spec: https://registry.khronos.org/webgl/extensions/EXT_color_buffer_float/
 group: webgl-extensions
 compat_features:
