--- a/features/ext-color-buffer-half-float.yml
+++ b/features/ext-color-buffer-half-float.yml
@@ -1,5 +1,5 @@
-name: WebGL EXT_color_buffer_half_float extension
-description: The `EXT_color_buffer_half_float` extension to WebGL TODO
+name: EXT_color_buffer_half_float WebGL extension
+description: The `EXT_color_buffer_half_float` extension for WebGL 1.0 and 2.0 contexts renders 16-bit floating-point color buffers.
 spec: https://registry.khronos.org/webgl/extensions/EXT_color_buffer_half_float/
 group: webgl-extensions
 compat_features:
