--- a/features/ext-float-blend.yml
+++ b/features/ext-float-blend.yml
@@ -1,5 +1,5 @@
-name: WebGL EXT_float_blend extension
-description: The `EXT_float_blend` extension to WebGL TODO
+name: EXT_float_blend WebGL extension
+description: The `EXT_float_blend` extension for WebGL 1.0 and 2.0 contexts adds 32-bit floating-point components to blending and draw buffers.
 spec: https://registry.khronos.org/webgl/extensions/EXT_float_blend/
 group: webgl-extensions
 compat_features:
