--- a/features/ext-frag-depth.yml
+++ b/features/ext-frag-depth.yml
@@ -1,5 +1,5 @@
-name: WebGL EXT_frag_depth extension
-description: The `EXT_frag_depth` extension to WebGL TODO
+name: EXT_frag_depth WebGL extension
+description: The `EXT_frag_depth` extension for WebGL 1.0 and 2.0 contexts adds the ability to set the depth value of a fragment from within the fragment shader.
 spec: https://registry.khronos.org/webgl/extensions/EXT_frag_depth/
 group: webgl-extensions
 compat_features:
