--- a/features/ext-srgb.yml
+++ b/features/ext-srgb.yml
@@ -1,5 +1,5 @@
-name: WebGL EXT_sRGB extension
-description: The `EXT_sRGB` extension to WebGL TODO
+name: EXT_sRGB WebGL extension
+description: The `EXT_sRGB` extension for WebGL 1.0 contexts adds sRGB support to textures and framebuffer objects.
 spec: https://registry.khronos.org/webgl/extensions/EXT_sRGB/
 group: webgl-extensions
 compat_features:
