--- a/features/ext-texture-compression-bptc.yml
+++ b/features/ext-texture-compression-bptc.yml
@@ -1,5 +1,5 @@
-name: WebGL EXT_texture_compression_bptc extension
-description: The `EXT_texture_compression_bptc` extension to WebGL TODO
+name: EXT_texture_compression_bptc WebGL extension
+description: The `EXT_texture_compression_bptc` extension for WebGL 1.0 and 2.0 contexts adds the BPTC compressed texture formats to `compressedTexImage2D()` and `compressedTexSubImage2D()`.
 spec: https://registry.khronos.org/webgl/extensions/EXT_texture_compression_bptc/
 group: webgl-extensions
 compat_features:
