--- a/features/ext-texture-compression-rgtc.yml
+++ b/features/ext-texture-compression-rgtc.yml
@@ -1,5 +1,5 @@
-name: WebGL EXT_texture_compression_rgtc extension
-description: The `EXT_texture_compression_rgtc` extension to WebGL TODO
+name: EXT_texture_compression_rgtc WebGL extension
+description: The `EXT_texture_compression_rgtc` extension for WebGL 1.0 and 2.0 contexts adds RGTC compressed texture formats. RGTC is a block-based texture compression format suited for unsigned and signed red and red-green textures (Red-Green Texture Compression).
 spec: https://registry.khronos.org/webgl/extensions/EXT_texture_compression_rgtc/
 group: webgl-extensions
 compat_features:
