--- a/features/ext-texture-filter-anisotropic.yml
+++ b/features/ext-texture-filter-anisotropic.yml
@@ -1,5 +1,5 @@
-name: WebGL EXT_texture_filter_anisotropic extension
-description: The `EXT_texture_filter_anisotropic` extension to WebGL TODO
+name: EXT_texture_filter_anisotropic WebGL extension
+description: The `EXT_texture_filter_anisotropic` extension for WebGL 1.0 and 2.0 contexts adds anisotropic filtering (AF). AF improves the quality of mipmapped texture access when viewing a textured primitive at an oblique angle.
 spec: https://registry.khronos.org/webgl/extensions/EXT_texture_filter_anisotropic/
 group: webgl-extensions
 compat_features:
