--- a/features/khr-parallel-shader-compile.yml
+++ b/features/khr-parallel-shader-compile.yml
@@ -1,5 +1,5 @@
-name: WebGL KHR_parallel_shader_compile extension
-description: The `KHR_parallel_shader_compile` extension to WebGL TODO
+name: KHR_parallel_shader_compile WebGL extension
+description: The `KHR_parallel_shader_compile` extension for WebGL 1.0 and 2.0 contexts checks the status of shader compilation without blocking the runtime.
 spec: https://registry.khronos.org/webgl/extensions/KHR_parallel_shader_compile/
 group: webgl-extensions
 compat_features:
