--- a/features/oes-element-index-uint.yml
+++ b/features/oes-element-index-uint.yml
@@ -1,5 +1,5 @@
-name: WebGL OES_element_index_uint extension
-description: The `OES_element_index_uint` extension to WebGL TODO
+name: OES_element_index_uint WebGL extension
+description: The `OES_element_index_uint` extension for WebGL 1.0 contexts adds support for `gl.UNSIGNED_INT` types to `WebGLRenderingContext.drawElements()`.
 spec: https://registry.khronos.org/webgl/extensions/OES_element_index_uint/
 group: webgl-extensions
 compat_features:
