--- a/features/oes-standard-derivatives.yml
+++ b/features/oes-standard-derivatives.yml
@@ -1,5 +1,5 @@
-name: WebGL OES_standard_derivatives extension
-description: The `OES_standard_derivatives` extension to WebGL TODO
+name: OES_standard_derivatives WebGL extension
+description: The `OES_standard_derivatives` extension for WebGL 1.0 contexts adds the GLSL derivative functions `dFdx`, `dFdy`, and `fwidth`.
 spec: https://registry.khronos.org/webgl/extensions/OES_standard_derivatives/
 group: webgl-extensions
 compat_features:
