--- a/features/oes-texture-float-linear.yml
+++ b/features/oes-texture-float-linear.yml
@@ -1,5 +1,5 @@
-name: WebGL OES_texture_float_linear extension
-description: The `OES_texture_float_linear` extension to WebGL TODO
+name: OES_texture_float_linear WebGL extension
+description: The `OES_texture_float_linear` extension for WebGL 1.0 and 2.0 contexts adds linear filtering with floating-point pixel types for textures.
 spec: https://registry.khronos.org/webgl/extensions/OES_texture_float_linear/
 group: webgl-extensions
 compat_features:
