--- a/features/webgl-color-buffer-float.yml
+++ b/features/webgl-color-buffer-float.yml
@@ -1,5 +1,5 @@
-name: WebGL WEBGL_color_buffer_float extension
-description: The `WEBGL_color_buffer_float` extension to WebGL TODO
+name: WEBGL_color_buffer_float WebGL extension
+description: The `WEBGL_color_buffer_float` extension for WebGL 1.0 contexts adds the 32-bit floating-point type `RGBA32F` as a color-renderable format.
 spec: https://registry.khronos.org/webgl/extensions/WEBGL_color_buffer_float/
 group: webgl-extensions
 compat_features:
