--- a/features/webgl-compressed-texture-astc.yml
+++ b/features/webgl-compressed-texture-astc.yml
@@ -1,5 +1,5 @@
-name: WebGL WEBGL_compressed_texture_astc extension
-description: The `WEBGL_compressed_texture_astc` extension to WebGL TODO
+name: WEBGL_compressed_texture_astc WebGL extension
+description: The `WEBGL_compressed_texture_astc` extension for WebGL 1.0 and 2.0 contexts adds the Adaptive Scalable Texture Compression format to `compressedTexImage2D()` and `compressedTexSubImage2D()`.
 spec: https://registry.khronos.org/webgl/extensions/WEBGL_compressed_texture_astc/
 group: webgl-extensions
 compat_features:
