--- a/features/webgl-compressed-texture-etc1.yml
+++ b/features/webgl-compressed-texture-etc1.yml
@@ -1,5 +1,5 @@
-name: WebGL WEBGL_compressed_texture_etc1 extension
-description: The `WEBGL_compressed_texture_etc1` extension to WebGL TODO
+name: WEBGL_compressed_texture_etc1 WebGL extension
+description: The `WEBGL_compressed_texture_etc1` extension for WebGL 1.0 and 2.0 contexts adds the ETC1 compressed texture format to `compressedTexImage2D()` and `compressedTexSubImage2D()`.
 spec: https://registry.khronos.org/webgl/extensions/WEBGL_compressed_texture_etc1/
 group: webgl-extensions
 compat_features:
