--- a/features/webgl-compressed-texture-pvrtc.yml
+++ b/features/webgl-compressed-texture-pvrtc.yml
@@ -1,5 +1,5 @@
-name: WebGL WEBGL_compressed_texture_pvrtc extension
-description: The `WEBGL_compressed_texture_pvrtc` extension to WebGL TODO
+name: WEBGL_compressed_texture_pvrtc WebGL extension
+description: The `WEBGL_compressed_texture_pvrtc` extension for WebGL 1.0 and 2.0 contexts adds PVRTC compressed texture formats to `compressedTexImage2D()` and `compressedTexSubImage2D()`.
 spec: https://registry.khronos.org/webgl/extensions/WEBGL_compressed_texture_pvrtc/
 group: webgl-extensions
 compat_features:
