--- a/features/webgl-compressed-texture-s3tc-srgb.yml
+++ b/features/webgl-compressed-texture-s3tc-srgb.yml
@@ -1,5 +1,5 @@
-name: WebGL WEBGL_compressed_texture_s3tc_srgb extension
-description: The `WEBGL_compressed_texture_s3tc_srgb` extension to WebGL TODO
+name: WEBGL_compressed_texture_s3tc_srgb WebGL extension
+description: The `WEBGL_compressed_texture_s3tc_srgb` extension for WebGL 1.0 and 2.0 contexts adds S3TC compressed texture formats for the sRGB colorspace to `compressedTexImage2D()` and `compressedTexSubImage2D()`.
 spec: https://registry.khronos.org/webgl/extensions/WEBGL_compressed_texture_s3tc_srgb/
 group: webgl-extensions
 compat_features:
