--- a/features/webgl-compressed-texture-s3tc.yml
+++ b/features/webgl-compressed-texture-s3tc.yml
@@ -1,5 +1,5 @@
-name: WebGL WEBGL_compressed_texture_s3tc extension
-description: The `WEBGL_compressed_texture_s3tc` extension to WebGL TODO
+name: WEBGL_compressed_texture_s3tc WebGL extension
+description: The `WEBGL_compressed_texture_s3tc` extension for WebGL 1.0 and 2.0 contexts adds S3TC compressed texture formats to `compressedTexImage2D()` and `compressedTexSubImage2D()`.
 spec: https://registry.khronos.org/webgl/extensions/WEBGL_compressed_texture_s3tc/
 group: webgl-extensions
 compat_features:
