--- a/features/webgl-debug-renderer-info.yml
+++ b/features/webgl-debug-renderer-info.yml
@@ -1,5 +1,5 @@
-name: WebGL WEBGL_debug_renderer_info extension
-description: The `WEBGL_debug_renderer_info` extension to WebGL TODO
+name: WEBGL_debug_renderer_info WebGL extension
+description: The `WEBGL_debug_renderer_info` extension for WebGL 1.0 and 2.0 contexts exposes information about the graphics driver for debugging purposes.
 spec: https://registry.khronos.org/webgl/extensions/WEBGL_debug_renderer_info/
 group: webgl-extensions
 compat_features:
