--- a/features/webgl-debug-shaders.yml
+++ b/features/webgl-debug-shaders.yml
@@ -1,5 +1,5 @@
-name: WebGL WEBGL_debug_shaders extension
-description: The `WEBGL_debug_shaders` extension to WebGL TODO
+name: WEBGL_debug_shaders WebGL extension
+description: The `WEBGL_debug_shaders` extension for WebGL 1.0 and 2.0 contexts adds the `getTranslatedShaderSource()` method to debug shaders from privileged contexts.
 spec: https://registry.khronos.org/webgl/extensions/WEBGL_debug_shaders/
 group: webgl-extensions
 compat_features:
