--- a/features/webgl-depth-texture.yml
+++ b/features/webgl-depth-texture.yml
@@ -1,5 +1,5 @@
-name: WebGL WEBGL_depth_texture extension
-description: The `WEBGL_depth_texture` extension to WebGL TODO
+name: WEBGL_depth_texture WebGL extension
+description: The `WEBGL_depth_texture` extension for WebGL 1.0 contexts defines 2D depth and depth-stencil textures.
 spec: https://registry.khronos.org/webgl/extensions/WEBGL_depth_texture/
 group: webgl-extensions
 compat_features:
