--- a/features/webgl-lose-context.yml
+++ b/features/webgl-lose-context.yml
@@ -1,5 +1,5 @@
-name: WebGL WEBGL_lose_context extension
-description: The `WEBGL_lose_context` extension to WebGL TODO
+name: WEBGL_lose_context WebGL extension
+description: The `WEBGL_lose_context` extension for WebGL 1.0 and 2.0 contexts simulates losing and restoring a `WebGLRenderingContext` or  `WebGL2RenderingContext`.
 spec: https://registry.khronos.org/webgl/extensions/WEBGL_lose_context/
 group: webgl-extensions
 compat_features:
