Apply suggestions from code review
Co-authored-by: Daniel D. Beck <daniel@ddbeck.com>

--- a/features/contents-attr.yml
+++ b/features/contents-attr.yml
@@ -1,5 +1,5 @@
-name: "content: attr()"
-description: "The `content: attr()` CSS declaration sets a `::before` or `::after` pseudo-element's content to the value of the specified HTML attribute."
+name: attr() (content only)
+description: "The `attr()` CSS function, in `content` property declarations, sets a `::before` or `::after` pseudo-element's content to the value of the specified HTML attribute."
 spec: https://drafts.csswg.org/css-values-5/#attr-notation
 group: css
 compat_features:
