--- a/features/attr.yml
+++ b/features/attr.yml
@@ -1,5 +1,5 @@
-name: attr
-description: "The `attr()` CSS function returns the value of an HTML element's attribute, which can then be used as a typed value in a CSS declaration (types include length, number, angle, color, etc.). For example `width: attr(length);`. A default value may be provided if the attribute is missing or invalid."
+name: attr()
+description: "The `attr()` CSS function, in the context of any property, returns the value of an attribute of an HTML element, with the option to return it as a specific type or unit. You can set a default value for missing or invalid attributes."
 spec: https://drafts.csswg.org/css-values-5/#attr-notation
 caniuse: css3-attr
 group: css
