Add anchor-scope keys to anchor positioning

--- a/features/anchor-positioning.yml.dist
+++ b/features/anchor-positioning.yml.dist
@@ -191,4 +191,7 @@ compat_features:
 
   # baseline: false
   # support: {}
+  - css.properties.anchor-scope
+  - css.properties.anchor-scope.all
+  - css.properties.anchor-scope.none
   - css.properties.position-anchor.auto
