Adds CSS abstract types to existing property features

--- a/features/animations-css.yml
+++ b/features/animations-css.yml
@@ -51,3 +51,4 @@ compat_features:
   - css.properties.animation-play-state.running
   - css.properties.animation-timing-function
   - css.properties.animation-timing-function.jump
+  - css.types.time
