--- a/features/content.yml
+++ b/features/content.yml
@@ -12,3 +12,5 @@ compat_features:
   - css.properties.content.none_applies_to_elements
   - css.properties.content.normal
   - css.properties.content.url
+  - css.types.string
+  - css.types.string.unicode_escaped_characters
