--- a/features/content.yml.dist
+++ b/features/content.yml.dist
@@ -30,6 +30,8 @@ compat_features:
   - css.properties.content.none
   - css.properties.content.normal
   - css.properties.content.url
+  - css.types.string
+  - css.types.string.unicode_escaped_characters
 
   # baseline: high
   # baseline_low_date: 2020-01-15
