--- a/features/font-face.yml
+++ b/features/font-face.yml
@@ -14,3 +14,4 @@ compat_features:
   - api.CSSFontFaceRule
   - api.CSSFontFaceRule.style
   - css.at-rules.font-face.unicode-range
+  - css.types.url
