--- a/features/opacity.yml
+++ b/features/opacity.yml
@@ -8,3 +8,5 @@ compat_features:
   - css.properties.opacity
   - css.properties.opacity.percentages
   - svg.global_attributes.opacity
+  - css.types.number
+  - css.types.number.scientific_notation
