--- a/features/transforms2d.yml
+++ b/features/transforms2d.yml
@@ -26,3 +26,12 @@ compat_features:
   - css.properties.transform-origin.right
   - css.properties.transform-origin.top
   - css.properties.transform-origin.three_value_syntax
+  - css.types.angle
+  - css.types.angle-percentage
+  - css.types.angle.deg
+  - css.types.angle.grad
+  - css.types.angle.rad
+  - css.types.angle.turn
+  - css.types.position
+  - css.types.position.four_value_syntax
+  - css.types.position.keyword_value_syntax
