--- a/features/width-height.yml
+++ b/features/width-height.yml
@@ -13,3 +13,7 @@ compat_features:
   - css.properties.width
   - css.properties.width.is_animatable
   - css.properties.width.auto
+  - css.types.dimension
+  - css.types.length
+  - css.types.length-percentage
+  - css.types.percentage
