--- a/features/width-height.yml.dist
+++ b/features/width-height.yml.dist
@@ -30,6 +30,10 @@ compat_features:
   - css.properties.height.auto
   - css.properties.width
   - css.properties.width.auto
+  - css.types.dimension
+  - css.types.length
+  - css.types.length-percentage
+  - css.types.percentage
 
   # baseline: high
   # baseline_low_date: 2015-07-29
