--- a/features/z-index.yml
+++ b/features/z-index.yml
@@ -6,3 +6,4 @@ compat_features:
   - css.properties.z-index
   - css.properties.z-index.auto
   - css.properties.z-index.negative_values
+  - css.types.integer
