--- a/features/z-index.yml.dist
+++ b/features/z-index.yml.dist
@@ -27,6 +27,7 @@ compat_features:
   #   safari_ios: "1"
   - css.properties.z-index
   - css.properties.z-index.auto
+  - css.types.integer
 
   # ⬇️ Same status as overall feature ⬇️
   # baseline: high
