--- a/features/animations-css.yml.dist
+++ b/features/animations-css.yml.dist
@@ -15,6 +15,19 @@ status:
     safari_ios: "9"
 compat_features:
   # baseline: high
+  # baseline_low_date: 2015-07-29
+  # baseline_high_date: 2018-01-29
+  # support:
+  #   chrome: "1"
+  #   chrome_android: "18"
+  #   edge: "12"
+  #   firefox: "4"
+  #   firefox_android: "4"
+  #   safari: "3.1"
+  #   safari_ios: "2"
+  - css.types.time
+
+  # baseline: high
   # baseline_low_date: 2015-09-30
   # baseline_high_date: 2018-03-30
   # support:
