--- a/features/transforms2d.yml.dist
+++ b/features/transforms2d.yml.dist
@@ -21,6 +21,20 @@ compat_features:
   #   chrome: "1"
   #   chrome_android: "18"
   #   edge: "12"
+  #   firefox: "1"
+  #   firefox_android: "4"
+  #   safari: "1"
+  #   safari_ios: "1"
+  - css.types.position
+  - css.types.position.keyword_value_syntax
+
+  # baseline: high
+  # baseline_low_date: 2015-07-29
+  # baseline_high_date: 2018-01-29
+  # support:
+  #   chrome: "1"
+  #   chrome_android: "18"
+  #   edge: "12"
   #   firefox: "3.5"
   #   firefox_android: "4"
   #   safari: "3.1"
@@ -37,6 +51,49 @@ compat_features:
   - css.types.transform-function.translate
   - css.types.transform-function.translateX
   - css.types.transform-function.translateY
+
+  # baseline: high
+  # baseline_low_date: 2015-07-29
+  # baseline_high_date: 2018-01-29
+  # support:
+  #   chrome: "2"
+  #   chrome_android: "18"
+  #   edge: "12"
+  #   firefox: "3.6"
+  #   firefox_android: "4"
+  #   safari: "4"
+  #   safari_ios: "3.2"
+  - css.types.angle
+  - css.types.angle-percentage
+  - css.types.angle.deg
+  - css.types.angle.grad
+  - css.types.angle.rad
+
+  # baseline: high
+  # baseline_low_date: 2015-07-29
+  # baseline_high_date: 2018-01-29
+  # support:
+  #   chrome: "2"
+  #   chrome_android: "18"
+  #   edge: "12"
+  #   firefox: "13"
+  #   firefox_android: "14"
+  #   safari: "4"
+  #   safari_ios: "3.2"
+  - css.types.angle.turn
+
+  # baseline: high
+  # baseline_low_date: 2015-07-29
+  # baseline_high_date: 2018-01-29
+  # support:
+  #   chrome: "25"
+  #   chrome_android: "25"
+  #   edge: "12"
+  #   firefox: "13"
+  #   firefox_android: "14"
+  #   safari: "7"
+  #   safari_ios: "7"
+  - css.types.position.four_value_syntax
 
   # ⬇️ Same status as overall feature ⬇️
   # baseline: high
