Apply suggestions from code review
Co-authored-by: Daniel D. Beck <daniel@ddbeck.com>

--- a/features/oes-fbo-render-mipmap.yml
+++ b/features/oes-fbo-render-mipmap.yml
@@ -1,5 +1,5 @@
 name: OES_fbo_render_mipmap WebGL extension
-description: The `OES_fbo_render_mipmap` extension for WebGL 1.0 contexts makes it possible to attach any level of a texture to a framebuffer object.
+description: The `OES_fbo_render_mipmap` extension for WebGL 1.0 contexts attaches any level of a texture to a framebuffer object.
 spec: https://registry.khronos.org/webgl/extensions/OES_fbo_render_mipmap/
 group: webgl-extensions
 compat_features:
