--- a/features/webgl-compressed-texture-etc.yml
+++ b/features/webgl-compressed-texture-etc.yml
@@ -1,5 +1,5 @@
 name: WEBGL_compressed_texture_etc WebGL extension
-description: The `WEBGL_compressed_texture_etc` extension for WebGL 1.0 and 2.0 contexts adds ETC/EAC compressed texture formats to `compressedTexImage2D()` and `compressedTexSubImage2D()`.
+description: The `WEBGL_compressed_texture_etc` extension for WebGL 1.0 and 2.0 contexts adds many ETC2 and EAC compressed texture formats to `compressedTexImage2D()` and `compressedTexSubImage2D()`.
 spec: https://registry.khronos.org/webgl/extensions/WEBGL_compressed_texture_etc/
 group: webgl-extensions
 compat_features:
