--- a/features/angle-instanced-arrays.yml
+++ b/features/angle-instanced-arrays.yml
@@ -1,5 +1,5 @@
 name: ANGLE_instanced_arrays WebGL extension
-description: The `ANGLE_instanced_arrays` extension for WebGL 1.0 contexts draws the same object, or groups of similar objects multiple times, if they share the same vertex data, primitive count and type.
+description: The `ANGLE_instanced_arrays` extension for WebGL 1.0 contexts draws the same object multiple times or groups of similar objects multiple times, if the group shares the same vertex data, primitive count and type.
 spec: https://registry.khronos.org/webgl/extensions/ANGLE_instanced_arrays/
 group: webgl-extensions
 compat_features:
