--- a/features/ext-blend-minmax.yml
+++ b/features/ext-blend-minmax.yml
@@ -1,5 +1,5 @@
 name: EXT_blend_minmax WebGL extension
-description: The `EXT_blend_minmax` extension for WebGL 1.0 contexts adds two new blend equations, the minimum or maximum color components of the source and destination colors.
+description: The `EXT_blend_minmax` extension for WebGL 1.0 contexts adds two blend equations, the minimum and maximum color components of the source and destination colors.
 spec: https://registry.khronos.org/webgl/extensions/EXT_blend_minmax/
 group: webgl-extensions
 compat_features:
