--- a/features/ext-shader-texture-lod.yml
+++ b/features/ext-shader-texture-lod.yml
@@ -1,5 +1,5 @@
 name: EXT_shader_texture_lod WebGL extension
-description: The `EXT_shader_texture_lod` extension for WebGL 1.0 and 2.0 contexts adds additional texture functions to the OpenGL ES Shading Language which provide the shader writer with explicit control of the level of detail (LOD).
+description: The `EXT_shader_texture_lod` extension for WebGL 1.0 and 2.0 contexts adds texture functions to the OpenGL ES Shading Language such that the shader writer explicitly controls of the level of detail (LOD).
 spec: https://registry.khronos.org/webgl/extensions/EXT_shader_texture_lod/
 group: webgl-extensions
 compat_features:
