--- a/features/oes-texture-half-float.yml
+++ b/features/oes-texture-half-float.yml
@@ -1,5 +1,5 @@
 name: OES_texture_half_float WebGL extension
-description: The `OES_texture_half_float` extension for WebGL 1.0 contexts adds texture formats with 16- (aka half float) and 32-bit floating-point components.
+description: The `OES_texture_half_float` extension for WebGL 1.0 contexts adds texture formats with 16-bit (also known as half float) and 32-bit floating-point components.
 spec: https://registry.khronos.org/webgl/extensions/OES_texture_half_float/
 group: webgl-extensions
 compat_features:
