--- a/features/oes-vertex-array-object.yml
+++ b/features/oes-vertex-array-object.yml
@@ -1,5 +1,5 @@
 name: OES_vertex_array_object WebGL extension
-description: The `OES_vertex_array_object` extension for WebGL 1.0 contexts provides vertex array objects (VAOs) which encapsulate vertex array states. These objects keep pointers to vertex data and provide names for different sets of vertex data.
+description: The `OES_vertex_array_object` extension for WebGL 1.0 contexts adds vertex array objects (VAOs) which encapsulate vertex array states. These objects keep pointers to vertex data and names for different sets of vertex data.
 spec: https://registry.khronos.org/webgl/extensions/OES_vertex_array_object/
 group: webgl-extensions
 compat_features:
