Add compat prefixed keys to recommended alternate features

--- a/features/supports.yml
+++ b/features/supports.yml
@@ -13,3 +13,4 @@ compat_features:
   - css.at-rules.supports.font-format
   - css.at-rules.supports.font-tech
   - css.at-rules.supports.selector
+  - css.at-rules.media.-webkit-transform-3d
