--- a/features/supports.yml.dist
+++ b/features/supports.yml.dist
@@ -30,6 +30,19 @@ compat_features:
   - css.at-rules.supports
 
   # baseline: high
+  # baseline_low_date: 2016-09-20
+  # baseline_high_date: 2019-03-20
+  # support:
+  #   chrome: "2"
+  #   chrome_android: "18"
+  #   edge: "12"
+  #   firefox: "49"
+  #   firefox_android: "49"
+  #   safari: "4"
+  #   safari_ios: "3.2"
+  - css.at-rules.media.-webkit-transform-3d
+
+  # baseline: high
   # baseline_low_date: 2021-04-26
   # baseline_high_date: 2023-10-26
   # support:
