--- a/features/manifest.yml
+++ b/features/manifest.yml
@@ -1,5 +1,5 @@
 name: Web app manifest
-description: A web app manifest file provides metadata about the site. The browser can use the metadata to install the site as a standalone application on the user's device. The metadata usually includes the app's name, icon, description, and ways in which the app wishes to integrate with the operating system.
+description: A web app manifest file provides metadata about the site. The browser can use the metadata to install the site as a standalone application on the user's device. The metadata usually includes the app's name, icon, description, and ways in which the app wishes to integrate with the device.
 spec: https://w3c.github.io/manifest/
 group: progressive-web-app
 compat_features:
