Add a key to WebXR

--- a/features/webxr-device.yml
+++ b/features/webxr-device.yml
@@ -111,3 +111,4 @@ compat_features:
   - api.WebGL2RenderingContext.makeXRCompatible
   - api.WebGLRenderingContext.makeXRCompatible
   - http.headers.Permissions-Policy.xr-spatial-tracking
+  - html.elements.iframe.allow.xr-spatial-tracking
