--- a/features/webxr-device.yml.dist
+++ b/features/webxr-device.yml.dist
@@ -109,6 +109,7 @@ compat_features:
   - api.XRWebGLLayer.getNativeFramebufferScaleFactor_static
   - api.XRWebGLLayer.getViewport
   - api.XRWebGLLayer.ignoreDepthValues
+  - html.elements.iframe.allow.xr-spatial-tracking
 
   # baseline: false
   # support:
