Add a key to WebUSB

--- a/features/webusb.yml
+++ b/features/webusb.yml
@@ -109,4 +109,5 @@ compat_features:
   - api.USBOutTransferResult.status
   - api.USBOutTransferResult.worker_support
   - api.WorkerNavigator.usb
+  - html.elements.iframe.allow.usb
   - http.headers.Permissions-Policy.usb
